--- a/css/main.css
+++ b/css/main.css
@@ -65,13 +65,7 @@ body {
 
 
 h1, h2, h3 {
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-family: 'Fjalla One', sans-serif;
-    font-family: 'Anton', sans-serif;
-    font-family: 'Passion One', cursive;
     font-family: 'Jockey One', sans-serif;
-
-
 }
 
 h1, h2, h3 {
@@ -106,8 +100,13 @@ p, a {
     color: #ff4200;
 }
 
+footer {
+
+    width: 100%;
+}
+
 footer a, footer a:hover, footer a:link, footer a:visited {
-    color: #ccc;
+    color: #aaa;
 }
 
 #contact li,
@@ -125,7 +124,7 @@ footer li.first:after{
     font-size: 1.2rem;
 }
 
-section#info {
+section {
     width: 95%;
     max-width: 500px;
     margin: 20px auto 0 auto;
@@ -136,149 +135,19 @@ section#info {
     border-top: 1px solid #ff4200;
 }
 
-#contact ul {
+#contact ul, footer ul {
     margin: 0;
     padding: 0;
 }
 
-footer
-
-header {
-    margin-bottom: 50px;
+#tree {
+    margin: 20px 0 20px 0;
 }
 
 hr {
-    margin-bottom: 15px;
+    margin-bottom: 18px;
 }
 
 
 
 
-
-
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-
-}
-
-@media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
-
-}
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-.invisible {
-    visibility: hidden;
-}
-
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-.clearfix {
-    *zoom: 1;
-}
-
-/* ==========================================================================
-   Print styles
-   ========================================================================== */
-
-@media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-}
