--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ section {
     max-width: 500px;
     margin: 20px auto 0 auto;
     background-color: white;
-    padding: 20px;
+    padding: 20px 20px 17px 20px;
     text-align: center;
     font-family: Trebuchet, sans-serif;
     border-top: 1px solid #ff4200;
@@ -146,7 +146,7 @@ section {
 }
 
 hr {
-    margin-bottom: 18px;
+    margin-bottom: 14px;
 }
 
 
